--- a/project/module/Magnetic/view/magnetic/cart/myOrder.phtml
+++ b/project/module/Magnetic/view/magnetic/cart/myOrder.phtml
@@ -1,5 +1,5 @@
 <?php
-$title = 'index';
+$title = 'myOrder';
 $this->headTitle($title);
 ?>
 <h1><?= $this->escapeHtml($title) ?></h1>
@@ -8,9 +8,9 @@ $this->headTitle($title);
 <tr>
     <th>Items name</th>
     <th>Description</th>
-    <th>price</th>
+    <th>Price</th>
     <th>quantity</th>
-    <th>created</th>
+    <th>Created</th>
 </tr>
 <?php foreach ($items as $item) : ?>
     <tr>
@@ -19,8 +19,8 @@ $this->headTitle($title);
         <td><?= $this->escapeHtml($item->price) ?></td>
         <td><?= $this->escapeHtml($item->quantity) ?></td>
         <td><?= $this->escapeHtml($item->created) ?></td>
-        <td>
-            <a href="<?= $this->url('cart', ['action' => 'add', 'id' => $item->id]) ?>">Order</a>
+         <td>
+            <a href="<?= $this->url('cart', ['action' => 'checkout', 'id' => $item->id]) ?>">Checkout</a>
         </td>
     </tr>
 <?php endforeach; ?>
