--- a/project/module/Magnetic/view/magnetic/items/itemsList.phtml
+++ b/project/module/Magnetic/view/magnetic/items/itemsList.phtml
@@ -1,5 +1,5 @@
 <?php
-$title = 'index';
+$title = 'itemsList';
 $this->headTitle($title);
 ?>
 <h1><?= $this->escapeHtml($title) ?></h1>
@@ -19,9 +19,13 @@ $this->headTitle($title);
         <td><?= $this->escapeHtml($item->price) ?></td>
         <td><?= $this->escapeHtml($item->quantity) ?></td>
         <td><?= $this->escapeHtml($item->created) ?></td>
-        <td>
-            <a href="<?= $this->url('cart', ['action' => 'add', 'id' => $item->id]) ?>">Order</a>
+         <td>
+            <a href="<?= $this->url('items', ['action' => 'update', 'id' => $item->id]) ?>">Update</a>
+        </td>
+         <td>
+            <a href="<?= $this->url('items', ['action' => 'delete', 'id' => $item->id]) ?>">Delete</a>
         </td>
     </tr>
 <?php endforeach; ?>
 </table>
+<a href="<?= $this->url('items', ['action' => 'create']) ?>">Create Item</a>
