--- a/project/module/Magnetic/view/layout/layout.phtml
+++ b/project/module/Magnetic/view/layout/layout.phtml
@@ -26,9 +26,8 @@
     <body>
         <div class="container">
 	        <div>
-	    		<a class="btn btn-primary" href="<?= $this->url('items', ['action' => 'logout']) ?>">Logout</a>
-	    		<a class="btn btn-primary" href="<?= $this->url('items') ?>">Home</a>
-	    		<?= (isset($status) && $status == 'user') ? require __DIR__ . '/elements/layout_menu.phtml' : ''; ?>
+	    		<?= (isset($status)) ? require __DIR__ . '/elements/layout_menu2.phtml' : ''; ?>
+	    		<?= (isset($status) && $status == 'user') ? require __DIR__ . '/elements/layout_menu1.phtml' : ''; ?>
 	    	</div>
         
             <?= $this->content ?>
